Fix sidebar z-index

--- a/html/themes/adminLTE/unl_data/css/custom_unl.css
+++ b/html/themes/adminLTE/unl_data/css/custom_unl.css
@@ -811,6 +811,6 @@ Free select
 .box-default{
   margin-bottom: 0px;
 }
-.jsplumb-connector { z-index:5201; }
-.jsplumb-endpoint { z-index:5202; }
-.jsplumb-overlay { z-index:5203; }
+.jsplumb-connector { z-index:1000; }
+.jsplumb-endpoint { z-index:1001; }
+.jsplumb-overlay { z-index:1002; }
